src/syntax/tests/data/negative/funcall-1.hsh
call()
dict[field](arg # missing parens here
fun(many)(chained)[field](calls)
fun(many).field(chained).field.calls()
